# analizadorLexico

./: entrega.txt
analizLexico/: CMakeLists.txt  abb.c  abb.h  analiz_lex_save.txt  analiz_lexico_save_c  analiz_lexico_save_h  analizador_lexico.c  analizador_lexico.h  analizador_sintactico.c  analizador_sintactico.h  analizador_sintactico_save  definiciones.h  gestion_errores.c  gestion_errores.h  main.c  sistema_entrada.c  sistema_entrada.h  sistema_entrada_save_c  sistema_entrada_save_h  tabla_simbolos.c  tabla_simbolos.h
automatasJFLAP/: numeros.jff
